--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
         <div>
           <h1>Koło Naukowe Matematyków Teoretyków</h1>
-          <h2>Uniwersytetu Wrocławskiego</h2>
+          <h3>Uniwersytetu Wrocławskiego</h3>
         </div>
       </div>
 
@@ -34,6 +34,20 @@
     </div>
 
     <div class="main_container">
+
     </div>
+
+    <footer>
+      <div class="foot_search">
+        <h3>Wyszukaj</h3>
+        <input type="text" id="search" name="search" value placeholder="Szukaj">
+      </div>
+      <div class="foot_contact">
+        <h3>Dane kontaktowe</h3>
+        pl. Grunwaldzki 2<br>
+        50-384 Wrocław<br>
+        POLSKA
+      </div>
+    </footer>
   </body>
 </html>
