--- a/assets/notfound.html
+++ b/assets/notfound.html
@@ -60,7 +60,7 @@
 
       <h1>Strona, której szukasz nie istnieje</h1>
 
-      Niemniej jednak, pragniemy poczęstować Cię zadankiem na podróż po naszej stronie:
+      Niemniej jednak, pragniemy poczęstować Cię zadankiem na umilenie podróży po naszej stronie:
 
       <p><i>
         Niech $r:S^n\to S^n$ będzie odbiciem względem pewnego równika $S^{n-1}\subset S^n$ i niech $H_+^n$, $H_-^n$ będą półsferami $S^n$, których brzegiem jest $S^{n-1}$. Niech $\sigma:\Delta^n\to H_+^n$ będzie homeomorfizmem, który posyła $\partial\Delta^n$ na $S^{n-1}=\partial H_+^n$. Sprawdź, że dla $n\geq 1$ łańcuch $c=\sigma-(r\circ\sigma)\in C_nS^n$ jest cyklem, który indukuje generator w grupie homologii $H_nS^n\cong \mathbb{Z}$.
