--- a/base/base.html
+++ b/base/base.html
@@ -51,7 +51,7 @@
     </div>
     <div class="button_menu">
       {% for sp in subpages %}
-        <button onclick="location.href='{{ b.location }}'>{{ b.name }}</button>
+        <button onclick="location.href='{{ sp.location }}'>{{ sp.name }}</button>
       {% endfor %}
     </div>
 
