--- a/wss/base.html
+++ b/wss/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Koło Naukowe Matematyków Teoretyków</title>
+    <title>Wrocławskie Spotkania Szkockie</title>
     <link rel="icon" href="/assets/img/logo/logo.png" type="image/icon type">
 
     <link rel="stylesheet" href="/stylesheets/basic-style.css">
@@ -23,13 +23,13 @@
     {% endblock %}
 
     <meta name="keywords" content="koło, naukowe, kolo, matematyka, matematyków, matematykow, worclaw, wrocław, teoretycznych, teoretyczna">
-    <meta name="description" content="Strona internetowa Koła Naukowego Matematyków Teoretyków na Uniwersytecie Wrocławskim">
+    <meta name="description" content="Wrocławskie Spotkania Szkocie to konferencja matematyczna dedykowana dla studentów matematyki i kierunków pokrewnych">
     <meta charset="UTF-8">
   </head>
   <body>
     <div class="main_header">
         <div class="search_contact">
-          <a href="/info">Dane Kontaktowe</a>
+          <a href="/info">dane kontaktowe</a>
 
           <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj" />
 
@@ -40,8 +40,8 @@
       <div class="left_header">
         <img src="/assets/img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
         <div>
-          <h1>Koło Naukowe Matematyków Teoretyków</h1>
-          <h3>Uniwersytetu Wrocławskiego</h3>
+          <h1>Wrocławskie Spotkania Szkockie</h1>
+          <h3>Organizowane przez KNMT IM UWr z pomocą Fundacji Matematyków Wrocławskich</h3>
         </div>
       </div>
 
@@ -64,12 +64,13 @@
 
     <footer>
       <div class="info_foot">
+      <img style="height: 108px;" src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" />
 
         <div class="foot_contact">
           <h3>Dane kontaktowe</h3>
           pl. Grunwaldzki 2<br>
           50-384 Wrocław<br>
-          Polska<br>
+          POLSKA<br>
           <a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
         </div>
 
@@ -77,7 +78,7 @@
           <h3>Wyszukaj</h3>
           <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
         </div>
-      <img src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" />
+      <img style="height: 108px;" src="/assets/img/fundacja_matematykow_logo.png" onclick="window.open('http://fmw.math.uni.wroc.pl/', '_blank')" />
 
       </div>
 
