--- a/wss/index.html
+++ b/wss/index.html
@@ -60,7 +60,6 @@ Wszystkie opłaty prosimy uiszczać na konto
 <br>
 <center>
   {{ nr_rachunku }}
-  56 1950 0001 2006 0692 5295 0002
 </center>
 w tytule przelewu wpisując <b>Konferencja KNMT - [<i>imię nazwisko</i>]</b>.
 
@@ -71,6 +70,6 @@ w tytule przelewu wpisując <b>Konferencja KNMT - [<i>imię nazwisko</i>]</b>.
   <br>
 
   <div style="width: 100%; display: flex; flex-direction: row; justify-content: center;">
-    <img width="750" src="/assets/img/wss-poster.png">
+    <img width="750" src="/content/wss/poster.png">
   </div>
 {% endblock %}
