--- a/wss/base.html
+++ b/wss/base.html
@@ -26,7 +26,7 @@
     <meta name="description" content="Wrocławskie Spotkania Szkocie to konferencja matematyczna dedykowana dla studentów matematyki i kierunków pokrewnych">
     <meta charset="UTF-8">
   </head>
-  <body>
+  <body data-theme="dark">
     <div class="main_header">
         <div class="search_contact">
           <a href="/info">dane kontaktowe</a>
