--- a/base/base.html
+++ b/base/base.html
@@ -23,12 +23,13 @@
     {% endblock %}
 
     <script>
+      const darkIcon = '/assets/img/light.svg'
+      const lightIcon = '/assets/img/moon.svg'
+
       function toggleDarkTheme() {
         let docBody = document.body
 
         let themeIcon = document.getElementById("dark-theme")
-        const lightIcon = '/assets/img/light.svg'
-        const darkIcon = '/assets/img/moon.svg'
 
         const dataTheme = docBody.getAttribute("data-theme")
 
@@ -44,14 +45,30 @@
         }
       }
 
-      const params = new URLSearchParams(window.location.search);
-      let theme = params.get("theme") || "light";
-      console.log(theme)
+      const params = new URLSearchParams(window.location.search)
+
+      let preferedTheme = "light"
+      if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        preferedTheme = "dark"
+      }
+      let theme = params.get("theme") || preferedTheme
+
+      window.onload = function () {
+        document.body.setAttribute("data-theme", theme)
+
+        let themeIcon = document.getElementById("dark-theme")
+
+        if (theme === "dark") {
+          themeIcon.setAttribute("src", darkIcon)
+        }
+        else {
+          themeIcon.setAttribute("src", lightIcon)
+        }
+      }
 
       function navigateTo(url) {
         theme = document.body.getAttribute("data-theme") || "light"
         const destination = `${url}?theme=${theme}`
-        console.log(theme, url, destination)
 
         window.open(destination, "_self")
       }
