info udpate | sign-up, events, files subpage

--- a/base/subpages/info/index.html
+++ b/base/subpages/info/index.html
@@ -48,6 +48,11 @@ a {
         <td>{{ p.skarbnik }}</td>
       </tr>
     </table>
+    <br />
+    <h2>Opiekun koła: </h2> 
+    <p style="margin-left: 10px !important;">
+      {{ p.opiekun }}
+    </p>
   </div>
 
   <div>
@@ -56,7 +61,7 @@ a {
       <tr><td>pl. Grunwaldzki 2</td></tr>
       <tr><td>50-384 Wrocław</td></tr>
       <tr><td>POLSKA</td></tr>
-      <tr><td><a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a></td></tr>
+      <tr><td><a href="mailto:knmt@math.uni.wroc.pl">knmt@math.uni.wroc.pl</a></td></tr>
     </table>
   </div>
 </div>
