--- a/wss/subpages/registration/index.html
+++ b/wss/subpages/registration/index.html
@@ -29,11 +29,11 @@ Opłata konferencyjna wynosi 30zł, a jeden obiad - 20 zł. Informacje jak dokon
 
 <div class="flexcolumn" styule="width: 100%;">
     <button class="wss_button" onclick="window.open({{ uczestnicy }}, '_blank')">
-        Rejestracja uczestników (do 27.03.2025)
+      Rejestracja uczestników (do {{ koniec_uczestnicy }})
     </button>
     <div style="height: 20px;"> </div>
     <button class="wss_button" onclick="window.open({{ referaty }}, '_blank')">
-        Rejestracja uczestników (do 27.03.2025)
+      Rejestracja uczestników (do {{ koniec_referaty }})
     </button>
 </div>
 
