--- a/base/base.html
+++ b/base/base.html
@@ -134,7 +134,7 @@
           <h3>Wyszukaj</h3>
           <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
         </div>
-      <img src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" />
+      <img src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" style="margin-bottom: 10px;" />
 
       </div>
 
