--- a/wss/base.html
+++ b/wss/base.html
@@ -73,6 +73,8 @@
         window.open(destination, "_self")
       }
     </script>
+    <script async src="https://cse.google.com/cse.js?cx=46ab87147f8354991">
+    </script>
 
     <meta name="keywords" content="koło, naukowe, kolo, matematyka, matematyków, matematykow, worclaw, wrocław, teoretycznych, teoretyczna">
     <meta name="description" content="Wrocławskie Spotkania Szkocie to konferencja matematyczna dedykowana dla studentów matematyki i kierunków pokrewnych">
@@ -82,8 +84,6 @@
     <div class="main_header">
         <div class="search_contact">
           <a href="/info">dane kontaktowe</a>
-
-          <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj" />
 
           <img src="/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" />
           <img src="/assets/img/calendar.svg" onclick="location.href='/calendar'" />
@@ -133,7 +133,8 @@
 
         <div class="foot_search">
           <h3>Wyszukaj</h3>
-          <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
+          <div class="gcse-search"></div>
+
         </div>
       <img style="height: 108px;" src="/assets/img/fundacja_matematykow_logo.png" onclick="window.open('http://fmw.math.uni.wroc.pl/', '_blank')" />
 
