--- a/base/subpages/files/index.html
+++ b/base/subpages/files/index.html
@@ -29,6 +29,9 @@ h2 {
     </pre>
     <embed src="/content/files/abstract-template.pdf" type="application/pdf" style="width: 40%; height: 750px;">
   </div>
+  <div class="flexrow_100">
+    <a class="wss_button" style="width: 100%; text-align: center;" href="content/files/abstract-template.zip" download="content/files/abstract-template.zip">Pobierz spakowaną templatkę</a>
+  </div>
 </div>
 
 
