--- a/base/base.html
+++ b/base/base.html
@@ -87,7 +87,7 @@
           <a href="/info">Dane Kontaktowe</a>
 
           <img src="/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" />
-          <img src="/assets/img/calendar.svg" onclick="location.href='/calendar'" />
+          <img src="/assets/img/calendar.svg" onclick="location.href='/events/'" />
           <img src="/assets/img/light.svg" id="dark-theme" onclick="toggleDarkTheme()" >
         </div>
 
