--- a/base/subpages/files/index.html
+++ b/base/subpages/files/index.html
@@ -32,6 +32,27 @@ h2 {
   <div class="flexrow_100">
     <a class="wss_button" style="width: 100%; text-align: center;" href="/content/files/abstract-template.zip" download="abstract-template.zip">Pobierz spakowaną templatkę</a>
   </div>
+
+  <h2>Wzór prezentacji A</h2>
+  <div class="flexrow_100" style="gap: 60px;">
+    <pre>
+{{ prezentacjaA }}
+    </pre>
+    <embed src="/content/files/prezentacja-template-A.pdf" type="application/pdf" style="width: 40%; height: 750px;">
+  </div>
+  <div class="flexrow_100">
+    <a class="wss_button" style="width: 100%; text-align: center;" href="/content/files/prezentacja-template-A.zip" download="prezentacja-template-A.zip">Pobierz spakowaną templatkę</a>
+  </div>
+  <h2>Wzór prezentacji B</h2>
+  <div class="flexrow_100" style="gap: 60px;">
+    <pre>
+{{ prezentacjaB }}
+    </pre>
+    <embed src="/content/files/prezentacja-template-B.pdf" type="application/pdf" style="width: 40%; height: 750px;">
+  </div>
+  <div class="flexrow_100">
+    <a class="wss_button" style="width: 100%; text-align: center;" href="/content/files/prezentacja-template-B.zip" download="prezentacja-template-B.zip">Pobierz spakowaną templatkę</a>
+  </div>
 </div>
 
 
